2009-04-22  Badlop  <badlop@process-one.net>

	* src/cyrsasl.erl: Change API of check_password: pass a function
	to generate the digest (thanks to Graham Whitted)(EJAB-863)
	* src/cyrsasl_anonymous.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise
	* src/cyrsasl_plain.erl: Likewise
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_anonymous.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/ejabberd_auth_pam.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise

	* src/ejabberd_c2s.erl: Fix for SASL Anonymous connections not
	stored or purged (thanks to Andy Skelton)(EJAB-912)

	* src/ejabberd_c2s.erl: Fix for SASL Anonymous connections not
	stored or purged (thanks to Andy Skelton)(EJAB-912)

	* src/mod_shared_roster.erl: Support in API to add 'all' as member
	of a group (thanks to Martin Langhoff)(EJAB-916)

2009-04-17  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document new ejabberdctl option. New section that
	documents AccessCommands. (EJAB-910)
	* doc/guide.html: Likewise

	* src/ejabberd_ctl.erl: New option to require auth in ejabberdctl
	and restrict what commands and arguments can execute (EJAB-910)
	* src/ejabberd_config.erl: Likewise

	* src/ejabberd_commands.erl: API to restrict who can execute what
	commands and arguments (EJAB-910)

	* src/mod_caps.erl: Fix unbound variable

2009-04-14  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that the recommended Erlang/OTP version
	is R12B-5, and R13 is not supported yet.
	* doc/guide.html: Likewise
	* README: Likewise

	* src/mod_muc/mod_muc_log.erl: Linkify also xmpp:..., as it was
	done previously (thanks to Konstantin Khomoutov)(EJAB-850)

2009-03-20  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: Better handling of presence hook and caps clean
	(thanks to Jonathan Schleifer)(EJAB-707)
	* src/ejabberd_c2s.erl: Likewise