@@ -447,8 +447,10 @@ do_route1(Host, ServerHost, Access, HistorySize, RoomShaper,
 		    Type = exmpp_stanza:get_type(Packet),
 		    case {Name, Type} of
 			{'presence', 'undefined'} ->
-			    case acl:match_rule(ServerHost, AccessCreate, From) of
-				allow ->
+			    case check_user_can_create_room(ServerHost,
+							    AccessCreate, From,
+							    Room) of
+				true ->
 				    ?DEBUG("MUC: open new room '~s'~n", [Room]),
 				    {ok, Pid} = mod_muc_room:start(
 						  Host, ServerHost, Access,
@@ -458,10 +460,10 @@ do_route1(Host, ServerHost, Access, HistorySize, RoomShaper,
 				    register_room(Host, Room, Pid),
 				    mod_muc_room:route(Pid, From, Nick, Packet),
 				    ok;
-				_ ->
-                    Lang = exmpp_stanza:get_lang(Packet),
+				false ->
+				    Lang = exmpp_stanza:get_lang(Packet),
 				    ErrText = "Room creation is denied by service policy",
-                    Err = exmpp_stanza:reply_with_error(Packet,exmpp_stanza:error(Packet#xmlel.ns,
+                                    Err = exmpp_stanza:reply_with_error(Packet,exmpp_stanza:error(Packet#xmlel.ns,
                                                        'forbidden',
                                                        {Lang,ErrText})),
 				    ejabberd_router:route(To, From, Err)
@@ -483,7 +485,14 @@ do_route1(Host, ServerHost, Access, HistorySize, RoomShaper,
 	    end
     end.
 
-
+check_user_can_create_room(ServerHost, AccessCreate, From, RoomID) ->
+    case acl:match_rule(ServerHost, AccessCreate, From) of
+	allow ->
+	    (size(RoomID) =< gen_mod:get_module_opt(ServerHost, mod_muc,
+						      max_room_id, infinite));
+	_ ->
+	    false
+    end.
 
 
 load_permanent_rooms(Host, ServerHost, Access, HistorySize, RoomShaper) ->
