@@ -1,5 +1,11 @@
 2009-04-22  Badlop  <badlop@process-one.net>
 
+	* src/mod_muc/mod_muc.erl: Limit number of characters in Room ID,
+	Name and Description (EJAB-899)
+	* src/mod_muc/mod_muc_room.erl: Likewise
+	* doc/guide.tex: Likewise
+	* doc/guide.html: Likewise
+
 	* src/cyrsasl.erl: Change API of check_password: pass a function
 	to generate the digest (thanks to Graham Whitted)(EJAB-863)
 	* src/cyrsasl_anonymous.erl: Likewise
